--- a/terms.html
+++ b/terms.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>MTG  Showcase</h1>
-        <div><a href="terms">Terms of Service</a></div>
+        <h2>Terms of Service</h2>
     </body>
 </html>
