--- a/privacy.html
+++ b/privacy.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>MTG  Showcase</h1>
-        <div><a href="terms">Terms of Service</a> | <a href="privacy">Privacy Policy</a></div>
+        <h2>Privacy Policy</h2>
     </body>
 </html>
