--- a/terms.html
+++ b/terms.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>MTG Showcase</title>
+        <title>MTG Showcase - Terms of Service</title>
+        <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
         <h1>MTG  Showcase</h1>
