--- a/privacy.html
+++ b/privacy.html
@@ -3,6 +3,8 @@
     <head>
         <title>MTG Showcase - Privacy Policy</title>
         <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel='icon' type='image/png' href='favicon.png'/>
+        <link rel='apple-touch-icon' type='image/png' href='apple-touch-icon.png'/>
     </head>
     <body>
         <h1>MTG  Showcase</h1>
