--- a/terms.html
+++ b/terms.html
@@ -3,7 +3,7 @@
     <head>
         <title>MTG Showcase - Terms of Service</title>
         <link rel="stylesheet" type="text/css" href="style.css" />
-        <link rel='icon' type='image/png' href='favicon.png'/>
+        <link rel='icon' type='image/x-icon' href='favicon.ico'/>
         <link rel='apple-touch-icon' type='image/png' href='apple-touch-icon.png'/>
     </head>
     <body>
