--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <title>MTG Showcase</title>
-        <link rel="stylesheet" type="text/css" href="style.css" />
-        <link rel='icon' type='image/x-icon' href='favicon.ico'/>
-        <link rel='apple-touch-icon' type='image/png' href='apple-touch-icon.png'/>
+        <link rel="stylesheet" type="text/css" href="style.css"/>
+        <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+        <link rel="apple-touch-icon" type="image/png" href="apple-touch-icon.png"/>
     </head>
     <body>
-        <h1>MTG  Showcase</h1>
+        <div><img src="icon.svg" alt="MTG Showcase" id="icon"/></div>
         <div><a href="terms">Terms of Service</a> | <a href="privacy">Privacy Policy</a></div>
     </body>
 </html>
