--- a/terms.html
+++ b/terms.html
@@ -7,7 +7,7 @@
         <link rel='apple-touch-icon' type='image/png' href='apple-touch-icon.png'/>
     </head>
     <body>
-        <h1>MTG  Showcase</h1>
+        <div><img src="icon.svg" alt="MTG Showcase" id="icon"/></div>
         <h2>Terms of Service</h2>
     </body>
 </html>
