--- a/terms.html
+++ b/terms.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
         <link rel='icon' type='image/x-icon' href='favicon.ico'/>
         <link rel='apple-touch-icon' type='image/png' href='apple-touch-icon.png'/>
+        <meta name="theme-color" content="#151515">
     </head>
     <body>
         <div><img src="icon.svg" alt="MTG Showcase" id="icon"/></div>
