--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="icon" type="image/x-icon" href="favicon.ico"/>
         <link rel="apple-touch-icon" type="image/png" href="apple-touch-icon.png"/>
         <meta name="theme-color" content="#151515">
+        <meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=no'>
     </head>
     <body>
         <div><img src="icon.svg" alt="MTG Showcase" id="icon"/></div>
