--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=no'>
     </head>
     <body>
-        <div><img src="icon.svg" alt="MTG Showcase" id="icon"/></div>
+        <div><a href="https://mtgshowcase.com"><img src="icon.svg" alt="MTG Showcase" id="icon"/></a></div>
         <div><a href="terms">Terms of Service</a> | <a href="privacy">Privacy Policy</a></div>
     </body>
 </html>
