--- a/privacy.html
+++ b/privacy.html
@@ -9,7 +9,7 @@
         <meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=no'>
     </head>
     <body>
-        <div><img src="icon.svg" alt="MTG Showcase" id="icon"/></div>
+        <div><a href="https://mtgshowcase.com"><img src="icon.svg" alt="MTG Showcase" id="icon"/></a></div>
         <h2>Privacy Policy</h2>
     </body>
 </html>
