--- a/terms.html
+++ b/terms.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <title>MTG Showcase - Terms of Service</title>
-        <link rel="stylesheet" type="text/css" href="style.css" />
-        <link rel='icon' type='image/x-icon' href='favicon.ico'/>
-        <link rel='apple-touch-icon' type='image/png' href='apple-touch-icon.png'/>
+        <link rel="stylesheet" type="text/css" href="style.css"/>
+        <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+        <link rel="apple-touch-icon" type="image/png" href="apple-touch-icon.png"/>
+        <meta charset="utf-8"/> 
         <meta name="theme-color" content="#151515">
-        <meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=no'>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     </head>
     <body>
         <div><a href="https://mtgshowcase.com"><img src="icon.svg" alt="MTG Showcase" id="icon"/></a></div>
