--- a/privacy.html
+++ b/privacy.html
@@ -2,14 +2,20 @@
 <html>
     <head>
         <title>MTG Showcase - Privacy Policy</title>
-        <link rel="stylesheet" type="text/css" href="style.css" />
-        <link rel='icon' type='image/x-icon' href='favicon.ico'/>
-        <link rel='apple-touch-icon' type='image/png' href='apple-touch-icon.png'/>
+        <link rel="stylesheet" type="text/css" href="style.css"/>
+        <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+        <link rel="apple-touch-icon" type="image/png" href="apple-touch-icon.png"/>
+        <meta charset="utf-8"/> 
         <meta name="theme-color" content="#151515">
-        <meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=no'>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     </head>
     <body>
         <div><a href="https://mtgshowcase.com"><img src="icon.svg" alt="MTG Showcase" id="icon"/></a></div>
         <h2>Privacy Policy</h2>
+        <div><p>Jakub Sedlák ("developer") is controller of data and operator of MTG Showcase ("app" or "application").</p></div>
+        <div><p>By using the app you agree to this Privacy Policy and processing app data by the developer.</p></div>
+        <div><p>Developer does not collect any kind of personal or personal-identifiable data from the app.</p></div>
+        <div><p>Developer can collect anonymous non-identifiable usage data, such as crash reports or analytics.</p></div>
+        <div><p>This Privacy Policy can be amended in the future and was last updated on 5th March 2024.</p></div>
     </body>
 </html>
