--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>MTG Showcase</title>
-        <link rel="stylesheet" type="text/css" href="style.css"/>
-        <link rel="icon" type="image/x-icon" href="favicon.ico"/>
-        <link rel="apple-touch-icon" type="image/png" href="apple-touch-icon.png"/>
-        <meta charset="utf-8"/> 
+        <meta charset="utf-8"> 
         <meta name="theme-color" content="#151515">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="favicon.ico">
+        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap">
+        <title>MTG Showcase</title>
     </head>
     <body>
         <div><a href="https://mtgshowcase.com"><img src="icon.svg" alt="MTG Showcase" id="icon"/></a></div>
