--- a/terms.html
+++ b/terms.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>MTG Showcase - Terms of Service</title>
-        <link rel="stylesheet" type="text/css" href="style.css"/>
-        <link rel="icon" type="image/x-icon" href="favicon.ico"/>
-        <link rel="apple-touch-icon" type="image/png" href="apple-touch-icon.png"/>
-        <meta charset="utf-8"/> 
+        <meta charset="utf-8"> 
         <meta name="theme-color" content="#151515">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="favicon.ico">
+        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap">
+        <title>MTG Showcase - Terms of Service</title>
     </head>
     <body>
         <div><a href="https://mtgshowcase.com"><img src="icon.svg" alt="MTG Showcase" id="icon"/></a></div>
         <h2>Terms of Service</h2>
-        <div><p>Jakub Sedlák ("developer") is controller of data and operator of MTG Showcase ("app" or "application").</p></div>
+        <div><p>Jakub Sedlák ("developer") is controller of data and operator of MTG/Card Showcase ("app").</p></div>
         <div><p>"Service(s)" refer to the usage of the app.</p></div>
         <div><p>These Terms of Service set terms and conditions to using the app and services offered by the developer.</p></div>
         <div><p>These Terms include Privacy Policy accessible anytime at <a href="https://mtgshowcase.com/privacy">https://mtgshowcase.com/privacy</a></p></div>
