--- a/privacy.html
+++ b/privacy.html
@@ -5,7 +5,7 @@
         <meta name="theme-color" content="#151515">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="favicon.png">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,6 +19,6 @@
         <div><p>By using the app you agree to this Privacy Policy and processing app data by the developer.</p></div>
         <div><p>Developer does not collect any kind of personal or personal-identifiable data from the app.</p></div>
         <div><p>Developer can collect anonymous non-identifiable usage data, such as crash reports or analytics.</p></div>
-        <div><p>This Privacy Policy can be amended in the future and was last updated on 5th March 2024.</p></div>
+        <div><p>This Privacy Policy can be amended in the future and was last updated on 9th March 2024.</p></div>
     </body>
 </html>
