--- a/terms.html
+++ b/terms.html
@@ -5,7 +5,7 @@
         <meta name="theme-color" content="#151515">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="favicon.png">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,18 +18,20 @@
         <div><p>Jakub Sedlák ("developer") is controller of data and operator of MTG/Card Showcase ("app").</p></div>
         <div><p>"Service(s)" refer to the usage of the app.</p></div>
         <div><p>These Terms of Service set terms and conditions to using the app and services offered by the developer.</p></div>
-        <div><p>These Terms include Privacy Policy accessible anytime at <a href="https://mtgshowcase.com/privacy">https://mtgshowcase.com/privacy</a></p></div>
+        <div><p>These Terms include Privacy Policy accessible anytime at <a href="privacy">https://mtgshowcase.com/privacy</a></p></div>
         <div><p>By using the app or paying for the Services you agree to these Terms including Privacy Policy.</p></div>
         <div><p>Developer reservers right to change, modify, add, or remove portions of these Terms at any time.</p></div>
-        <div><p>Changes of these Terms will be available in advance at <a href="https://mtgshowcase.com/terms">https://mtgshowcase.com/terms</a> and were last updated on 5th March 2024.</p></div>
+        <div><p>Changes of these Terms will be available in advance at <a href="terms">https://mtgshowcase.com/terms</a> and were last updated on 9th March 2024.</p></div>
         <div><p>Services are provided on an "as is" basis and you agree that you use the app at your own risk.</p></div>
-        <div><p>You hereby acknowledge and agree that by using the app or Services or inability to use the Service, under no circumstances, the developer will be liable to you or any third party for any damage, whether material, immaterial, direct, indirect, incidental, or consequential, including personal injury or death.</p></div>
+        <div><p>You hereby acknowledge and agree that by using the app or Services or inability to use the Services, under no circumstances, the developer will be liable to you or any third party for any damage, whether material, immaterial, direct, indirect, incidental, or consequential, including personal injury or death.</p></div>
         <div><p>You agree that any and all disputes arising from or connected to the Services shall be resolved individually, without resort to any form of class action. No claim may be consolidated or joined with another person's or party's claims.</p></div>
-        <div><p>In addition to the free Services offered in the app, paid subscription is available. Where payment is required, following additional terms apply.</p></div>
+        <div><p>These Terms are governed by Czech law and any disputes shall be resolved by the exclusive jurisdiction under the courts of the Czech Republic.</p></div>
+        <div><p>If any part of these Terms is found to be invalid, rest of these Terms remains in full force and effect .</p></div>
+        <div><p>In addition to free Services offered in the app, paid subscription is available. Where payment is required, following additional terms apply.</p></div>
         <div><p>Payment for the subscription is handled by third party (Apple) and by purchasing subscription you agree to be billed by third party in advance.</p></div>
         <div><p>Developer is not responsible for the payment processing provided by the third party.</p></div>
         <div><p>After your initial subscription commitment period, and again after any subsequent subscription period, your subscription will automatically continue for an additional equivalent period, at the price you agreed to when subscribing. You agree that your account will be subject to this automatic renewal feature. If you do not wish your account to renew automatically, or if you want to change or terminate your subscription, please go to your phone settings, and opt out of automatic renewal of your purchase. If you opt out of automatic renewal after your purchase, you may use your subscription until the end of your then-current subscription term; your subscription will not be renewed after your then-current term expires.</p></div>
         <div><p>All payments for subscriptions are non-refundable.</p></div>
-        <div><p>Initial price of the subscription can change and you will always be informed in advance.</p></div>
+        <div><p>Price of the subscription can change and you will always be informed about this change in advance.</p></div>
     </body>
 </html>
