--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="theme-color" content="#151515">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="favicon.png">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
