--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <body>
         <div><a href="https://mtgshowcase.com"><img src="icon.svg" alt="MTG Showcase" id="icon"/></a></div>
         <div><a href="terms">Terms of Service</a> | <a href="privacy">Privacy Policy</a></div>
+        <div><p><a href="mailto:support@mtgshowcase.com">Support</a></p></div>
     </body>
 </html>
