--- a/terms.html
+++ b/terms.html
@@ -33,5 +33,6 @@
         <div><p>After your initial subscription commitment period, and again after any subsequent subscription period, your subscription will automatically continue for an additional equivalent period, at the price you agreed to when subscribing. You agree that your account will be subject to this automatic renewal feature. If you do not wish your account to renew automatically, or if you want to change or terminate your subscription, please go to your phone settings, and opt out of automatic renewal of your purchase. If you opt out of automatic renewal after your purchase, you may use your subscription until the end of your then-current subscription term; your subscription will not be renewed after your then-current term expires.</p></div>
         <div><p>All payments for subscriptions are non-refundable.</p></div>
         <div><p>Price of the subscription can change and you will always be informed about this change in advance.</p></div>
+        <div><p>If you have any questions, you can contact the developer at <a href="mailto:support@mtgshowcase.com">support@mtgshowcase.com</a>.</p></div>
     </body>
 </html>
