--- a/privacy.html
+++ b/privacy.html
@@ -20,5 +20,6 @@
         <div><p>Developer does not collect any kind of personal or personal-identifiable data from the app.</p></div>
         <div><p>Developer can collect anonymous non-identifiable usage data, such as crash reports or analytics.</p></div>
         <div><p>This Privacy Policy can be amended in the future and was last updated on 9th March 2024.</p></div>
+        <div><p>If you have any questions, you can contact the developer at <a href="mailto:support@mtgshowcase.com">support@mtgshowcase.com</a>.</p></div>
     </body>
 </html>
