--- a/terms.html
+++ b/terms.html
@@ -28,9 +28,10 @@
         <div><p>These Terms are governed by Czech law and any disputes shall be resolved by the exclusive jurisdiction under the courts of the Czech Republic.</p></div>
         <div><p>If any part of these Terms is found to be invalid, rest of these Terms remains in full force and effect .</p></div>
         <div><p>In addition to free Services offered in the app, paid subscription is available. Where payment is required, following additional terms apply.</p></div>
+        <div><p>Availability of paid Services is not guaranteed due to technical errors or any other issues.</p></div>
         <div><p>Payment for the subscription is handled by third party (Apple) and by purchasing subscription you agree to be billed by third party in advance.</p></div>
         <div><p>Developer is not responsible for the payment processing provided by the third party.</p></div>
-        <div><p>After your initial subscription commitment period, and again after any subsequent subscription period, your subscription will automatically continue for an additional equivalent period, at the price you agreed to when subscribing. You agree that your account will be subject to this automatic renewal feature. If you do not wish your account to renew automatically, or if you want to change or terminate your subscription, please go to your phone settings, and opt out of automatic renewal of your purchase. If you opt out of automatic renewal after your purchase, you may use your subscription until the end of your then-current subscription term; your subscription will not be renewed after your then-current term expires.</p></div>
+        <div><p>Subscription automatically renews at the end of subscription period. Active subscription can be cancelled in your phone settings.</p></div>
         <div><p>All payments for subscriptions are non-refundable.</p></div>
         <div><p>Price of the subscription can change and you will always be informed about this change in advance.</p></div>
         <div><p>If you have any questions, you can contact the developer at <a href="mailto:support@mtgshowcase.com">support@mtgshowcase.com</a>.</p></div>
