--- a/terms.html
+++ b/terms.html
@@ -17,23 +17,24 @@
         <h2>Terms of Service</h2>
         <div><p>Jakub Sedlák ("developer") is controller of data and operator of MTG/Card Showcase ("app").</p></div>
         <div><p>"Service(s)" refer to the usage of the app.</p></div>
-        <div><p>These Terms of Service set terms and conditions to using the app and services offered by the developer.</p></div>
+        <div><p>These Terms of Service set terms and conditions to using the app and Services offered by the developer.</p></div>
         <div><p>These Terms include Privacy Policy accessible anytime at <a href="privacy">https://mtgshowcase.com/privacy</a></p></div>
         <div><p>By using the app or paying for the Services you agree to these Terms including Privacy Policy.</p></div>
         <div><p>Developer reservers right to change, modify, add, or remove portions of these Terms at any time.</p></div>
         <div><p>Changes of these Terms will be available in advance at <a href="terms">https://mtgshowcase.com/terms</a> and were last updated on 9th March 2024.</p></div>
         <div><p>Services are provided on an "as is" basis and you agree that you use the app at your own risk.</p></div>
+        <div><p>Developer is not responsible for content of 3rd party websites accessible in the app.</p></div>
         <div><p>You hereby acknowledge and agree that by using the app or Services or inability to use the Services, under no circumstances, the developer will be liable to you or any third party for any damage, whether material, immaterial, direct, indirect, incidental, or consequential, including personal injury or death.</p></div>
         <div><p>You agree that any and all disputes arising from or connected to the Services shall be resolved individually, without resort to any form of class action. No claim may be consolidated or joined with another person's or party's claims.</p></div>
         <div><p>These Terms are governed by Czech law and any disputes shall be resolved by the exclusive jurisdiction under the courts of the Czech Republic.</p></div>
-        <div><p>If any part of these Terms is found to be invalid, rest of these Terms remains in full force and effect .</p></div>
+        <div><p>If any part of these Terms is found to be invalid, rest of these Terms remains in full force and effect.</p></div>
         <div><p>In addition to free Services offered in the app, paid subscription is available. Where payment is required, following additional terms apply.</p></div>
-        <div><p>Availability of paid Services is not guaranteed due to technical errors or any other issues.</p></div>
+        <div><p>Availability of paid Services is not guaranteed due to possible technical errors or any other issues.</p></div>
         <div><p>Payment for the subscription is handled by third party (Apple) and by purchasing subscription you agree to be billed by third party in advance.</p></div>
         <div><p>Developer is not responsible for the payment processing provided by the third party.</p></div>
-        <div><p>Subscription automatically renews at the end of subscription period. Active subscription can be cancelled in your phone settings.</p></div>
+        <div><p>Subscription automatically renews at the end of subscription period. Active subscription can be cancelled in your phone settings anytime.</p></div>
         <div><p>All payments for subscriptions are non-refundable.</p></div>
-        <div><p>Price of the subscription can change and you will always be informed about this change in advance.</p></div>
+        <div><p>Price of the subscriptions are subject to change and you will always be informed about it in advance.</p></div>
         <div><p>If you have any questions, you can contact the developer at <a href="mailto:support@mtgshowcase.com">support@mtgshowcase.com</a>.</p></div>
     </body>
 </html>
