--- a/privacy.html
+++ b/privacy.html
@@ -15,11 +15,11 @@
     <body>
         <div><a href="https://mtgshowcase.com"><img src="icon.svg" alt="MTG Showcase" id="icon"/></a></div>
         <h2>Privacy Policy</h2>
-        <div><p>Jakub Sedlák ("developer") is controller of data and operator of MTG/Card Showcase ("app").</p></div>
+        <div><p>Jakub Sedlák ("developer") is controller of data and operator of (MTG) Showcase Cards ("app").</p></div>
         <div><p>By using the app you agree to this Privacy Policy and processing app data by the developer.</p></div>
         <div><p>Developer does not collect any kind of personal or personal-identifiable data from the app.</p></div>
         <div><p>Developer can collect anonymous non-identifiable usage data, such as crash reports or analytics.</p></div>
-        <div><p>This Privacy Policy can be amended in the future and was last updated on 9th March 2024.</p></div>
+        <div><p>This Privacy Policy can be amended in the future and was last updated on 11th March 2024.</p></div>
         <div><p>If you have any questions, you can contact the developer at <a href="mailto:support@mtgshowcase.com">support@mtgshowcase.com</a>.</p></div>
     </body>
 </html>
