--- a/terms.html
+++ b/terms.html
@@ -15,13 +15,13 @@
     <body>
         <div><a href="https://mtgshowcase.com"><img src="icon.svg" alt="MTG Showcase" id="icon"/></a></div>
         <h2>Terms of Service</h2>
-        <div><p>Jakub Sedlák ("developer") is controller of data and operator of MTG/Card Showcase ("app").</p></div>
+        <div><p>Jakub Sedlák ("developer") is controller of data and operator of (MTG) Showcase Cards ("app").</p></div>
         <div><p>"Service(s)" refer to the usage of the app.</p></div>
         <div><p>These Terms of Service set terms and conditions to using the app and Services offered by the developer.</p></div>
         <div><p>These Terms include Privacy Policy accessible anytime at <a href="privacy">https://mtgshowcase.com/privacy</a></p></div>
         <div><p>By using the app or paying for the Services you agree to these Terms including Privacy Policy.</p></div>
         <div><p>Developer reservers right to change, modify, add, or remove portions of these Terms at any time.</p></div>
-        <div><p>Changes of these Terms will be available in advance at <a href="terms">https://mtgshowcase.com/terms</a> and were last updated on 9th March 2024.</p></div>
+        <div><p>Changes of these Terms will be available in advance at <a href="terms">https://mtgshowcase.com/terms</a> and were last updated on 11th March 2024.</p></div>
         <div><p>Services are provided on an "as is" basis and you agree that you use the app at your own risk.</p></div>
         <div><p>Developer is not responsible for content of 3rd party websites accessible in the app.</p></div>
         <div><p>You hereby acknowledge and agree that by using the app or Services or inability to use the Services, under no circumstances, the developer will be liable to you or any third party for any damage, whether material, immaterial, direct, indirect, incidental, or consequential, including personal injury or death.</p></div>
