--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8"> 
         <meta name="theme-color" content="#151515">
+        <meta name="apple-itunes-app" content="app-id=6478541181">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="favicon.png">
