--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <div><a href="https://mtgshowcase.com"><img src="icon.svg" alt="MTG Showcase" id="icon"/></a></div>
-        <div><a href="terms">Terms of Service</a> | <a href="privacy">Privacy Policy</a></div>
-        <div><p><a href="mailto:support@mtgshowcase.com">Support</a></p></div>
+        <h1>MTG Showcase Cards</h1>
+        <div class="links"><a href="terms">Terms of Service</a> | <a href="privacy">Privacy Policy</a> | <a href="mailto:support@mtgshowcase.com">Support</a></div>
     </body>
 </html>
