--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <body>
         <div><a href="https://mtgshowcase.com"><img src="icon.svg" alt="MTG Showcase" id="icon"/></a></div>
         <h1>MTG Showcase Cards</h1>
+        <div><a href="https://apps.apple.com/us/app/showcase-cards/id6478541181"><img src="appstore.svg" alt="App Store Link" id="appstore"/></a></div>
         <div class="links"><a href="terms">Terms of Service</a> | <a href="privacy">Privacy Policy</a> | <a href="mailto:support@mtgshowcase.com">Support</a></div>
     </body>
 </html>
