--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8"> 
         <meta name="theme-color" content="#151515">
+        <meta name="description" content="Magic Card News & Database">
+        <meta name="keywords" content="mtg,showcase,cards,magic,card,news,database,app,ios">
         <meta name="apple-itunes-app" content="app-id=6478541181">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
@@ -11,7 +13,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap">
-        <title>MTG Showcase</title>
+        <title>MTG Showcase Cards</title>
     </head>
     <body>
         <div><a href="https://mtgshowcase.com"><img src="icon.svg" alt="MTG Showcase" id="icon"/></a></div>
