--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
     <body>
         <div><a href="https://mtgshowcase.com"><img src="icon.svg" alt="MTG Showcase" id="icon"/></a></div>
         <h1>MTG Showcase Cards</h1>
-        <div><a href="https://apps.apple.com/us/app/showcase-cards/id6478541181"><img src="1.png" alt="App Screenshots" id="screenshots"/></a></div>
+        <div>
+            <div id="slideshow">
+                <a href="https://apps.apple.com/us/app/showcase-cards/id6478541181"><img src="4.png" alt="App Screenshots" class="screenshots"/></a>
+                <a href="https://apps.apple.com/us/app/showcase-cards/id6478541181"><img src="3.png" alt="App Screenshots" id="screenshot3" class="screenshots"/></a>
+                <a href="https://apps.apple.com/us/app/showcase-cards/id6478541181"><img src="2.png" alt="App Screenshots" id="screenshot2" class="screenshots"/></a>
+                <a href="https://apps.apple.com/us/app/showcase-cards/id6478541181"><img src="1.png" alt="App Screenshots" id="screenshot1" class="screenshots"/></a>
+            </div>
+        </div>
         <div><a href="https://apps.apple.com/us/app/showcase-cards/id6478541181"><img src="appstore.svg" alt="App Store Link" id="appstore"/></a></div>
         <div class="links"><a href="terms">Terms of Service</a> | <a href="privacy">Privacy Policy</a> | <a href="mailto:support@mtgshowcase.com">Support</a></div>
     </body>
