--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <a href="https://apps.apple.com/us/app/showcase-cards/id6478541181"><img src="1.png" alt="App Screenshots" id="screenshot1" class="screenshots"/></a>
             </div>
         </div>
+        <div id="signature"><a href="https://jakubsedlak.com">Jakub Sedlák 2024</a></div>
         <div><a href="https://apps.apple.com/us/app/showcase-cards/id6478541181"><img src="appstore.svg" alt="App Store Link" id="appstore"/></a></div>
         <div class="links"><a href="terms">Terms of Service</a> | <a href="privacy">Privacy Policy</a> | <a href="mailto:support@mtgshowcase.com">Support</a></div>
     </body>
