--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <body>
         <div><a href="https://mtgshowcase.com"><img src="icon.svg" alt="MTG Showcase" id="icon"/></a></div>
         <h1>MTG Showcase Cards</h1>
+        <h3>Magic Card News & Database</h3>
         <div>
             <div id="slideshow">
                 <a href="https://apps.apple.com/us/app/showcase-cards/id6478541181"><img src="4.png" alt="App Screenshots" class="screenshots"/></a>
@@ -27,7 +28,7 @@
             </div>
         </div>
         <div id="signature"><a href="https://jakubsedlak.com">Jakub Sedlák 2024</a></div>
-        <div><a href="https://apps.apple.com/us/app/showcase-cards/id6478541181"><img src="appstore.svg" alt="App Store Link" id="appstore"/></a></div>
+        <div><a href="https://apps.apple.com/us/app/showcase-cards/id6478541181"><img src="appstore.svg" alt="Download on the App Store" id="appstore"/></a></div>
         <div class="links"><a href="terms">Terms of Service</a> | <a href="privacy">Privacy Policy</a> | <a href="mailto:support@mtgshowcase.com">Support</a></div>
     </body>
 </html>
