--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
     <head>
         <meta charset="utf-8"> 
         <meta name="theme-color" content="#151515">
-        <meta name="description" content="Magic Card News & Database">
+        <meta name="description" content="Magic Cards News & Database">
         <meta name="keywords" content="mtg,showcase,cards,magic,card,news,database,app,ios">
         <meta name="apple-itunes-app" content="app-id=6478541181">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" href="favicon.png">
-        <link rel="apple-touch-icon" href="touchicon.png">
+        <link rel="icon" href="/favicon.png">
+        <link rel="apple-touch-icon" href="/touchicon.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap">
-        <title>MTG Showcase Cards</title>
+        <title>MTG Showcase</title>
     </head>
     <body>
         <div><a href="https://mtgshowcase.com"><img src="icon.svg" alt="MTG Showcase" id="icon"/></a></div>
-        <h1>MTG Showcase Cards</h1>
-        <h3>Magic Card News & Database</h3>
+        <h1>MTG Showcase</h1>
+        <h3>Magic Cards News & Database</h3>
         <div>
             <div id="slideshow">
                 <a href="https://apps.apple.com/us/app/showcase-cards/id6478541181"><img src="4.png" alt="App Screenshots" class="screenshots"/></a>
