--- a/planes/lorwyn.html
+++ b/planes/lorwyn.html
@@ -7,7 +7,7 @@
         <meta name="keywords" content="mtg,showcase,cards,magic,card,news,database,app,ios">
         <meta name="apple-itunes-app" content="app-id=6478541181">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/style.css">
         <link rel="icon" href="/favicon.png">
         <link rel="apple-touch-icon" href="/touchicon.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +16,6 @@
         <title>MTG Showcase</title>
     </head>
     <body>
-        <div><a href="https://mtgshowcase.com"><img src="icon.svg" alt="MTG Showcase" id="icon"/></a></div>
         <h2>Lorwyn</h1>
         <h3>Showcase</h3>
     </body>
