--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <link rel="apple-touch-icon" href="/touchicon.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap">
         <title>MTG Showcase</title>
     </head>
     <body>
-        <div><a href="https://mtgshowcase.com"><img src="icon.svg" alt="MTG Showcase" id="icon"/></a></div>
+        <div id="icon"><a href="https://mtgshowcase.com">Φ</a></div>
         <h1>MTG Showcase</h1>
         <h3>Magic Cards News & Database</h3>
         <div>
