--- a/planes/lorwyn.html
+++ b/planes/lorwyn.html
@@ -12,11 +12,11 @@
         <link rel="apple-touch-icon" href="/touchicon.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap">
         <title>MTG Showcase</title>
     </head>
     <body>
-        <h2>Lorwyn</h1>
+        <h2>Lorwyn</h2>
         <h3>Showcase</h3>
     </body>
 </html>
