--- a/privacy.html
+++ b/privacy.html
@@ -9,11 +9,11 @@
         <link rel="apple-touch-icon" href="touchicon.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap">
         <title>Privacy Policy</title>
     </head>
     <body>
-        <div><a href="https://mtgshowcase.com"><img src="icon.svg" alt="MTG Showcase" id="icon"/></a></div>
+        <div id="icon"><a href="https://mtgshowcase.com">Φ</a></div>
         <h2>Privacy Policy</h2>
         <div><p>Jakub Sedlák ("developer") is controller of data and operator of (MTG) Showcase Cards ("app").</p></div>
         <div><p>By using the app you agree to this Privacy Policy and processing app data by the developer.</p></div>
